// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset renders 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0"
  >
    <div
      className="Text fontSize1 darkGray alignLeft breakWord fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Schnauzer"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Schnauzer"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <label
        className="label"
        htmlFor="Schnauzer"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
          >
            Schnauzer
          </div>
        </div>
      </label>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Aussie"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Aussie"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <label
        className="label"
        htmlFor="Aussie"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
          >
            Aussie
          </div>
        </div>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a visually hidden legend 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0 visuallyHidden"
  >
    <div
      className="Text fontSize1 darkGray alignLeft breakWord fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Schnauzer"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Schnauzer"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <label
        className="label"
        htmlFor="Schnauzer"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
          >
            Schnauzer
          </div>
        </div>
      </label>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Aussie"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Aussie"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <label
        className="label"
        htmlFor="Aussie"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
          >
            Aussie
          </div>
        </div>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a visually hidden legend 2`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0 visuallyHidden"
  >
    <div
      className="Text fontSize1 darkGray alignLeft breakWord fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Schnauzer"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Schnauzer"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <label
        className="label"
        htmlFor="Schnauzer"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
          >
            Schnauzer
          </div>
        </div>
      </label>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Aussie"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Aussie"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <label
        className="label"
        htmlFor="Aussie"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
          >
            Aussie
          </div>
        </div>
      </label>
    </div>
  </div>
</fieldset>
`;
